Bug 395562 - Slash at start of NFS mount point is not being displayed
Summary: Slash at start of NFS mount point is not being displayed
Status: RESOLVED FIXED
Alias: None
Product: frameworks-solid
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.50.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-18 13:43 UTC by Shriramana Sharma
Modified: 2018-09-27 15:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot demonstrating the bug (18.09 KB, image/png)
2018-06-18 13:43 UTC, Shriramana Sharma
Details
bug not found in Kubuntu Xenial (23.48 KB, image/png)
2018-06-19 02:20 UTC, Shriramana Sharma
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Shriramana Sharma 2018-06-18 13:43:37 UTC
Created attachment 113409 [details]
screenshot demonstrating the bug

Please see the attached screenshot. You can see that the entries in the middle are NFS entries reading as "SHARE on HOST" but they don't have the initial slash displayed so "/ on laptop" reads as " on laptop" etc. Please look into and fix this. Thank you.
Comment 1 Shriramana Sharma 2018-06-19 02:20:09 UTC
Created attachment 113416 [details]
bug not found in Kubuntu Xenial

I notice that the bug is not seen in Kubuntu Xenial. I have attached a screenshot showing this as well as the respective versions.
Comment 2 Kai Uwe Broulik 2018-06-27 14:51:19 UTC
Seems intentional, for some reason:
https://cgit.kde.org/solid.git/tree/src/solid/devices/backends/fstab/fstabdevice.cpp#n37
Comment 3 Stefan Brüns 2018-06-27 15:37:23 UTC
This is a KDE bug tracker, so you should note down the KDE specific version. I don't know what Xenial is, and I don't care.

Can you please provide your fstab, thanks!
Comment 4 Stefan Brüns 2018-09-27 15:24:48 UTC
Fix:

https://phabricator.kde.org/D15798
Comment 5 Stefan Brüns 2018-09-27 15:37:31 UTC
Git commit 419a551baa3e2274bb13a7dad7b9d475eff39cd3 by Stefan Brüns.
Committed on 27/09/2018 at 15:37.
Pushed by bruns into branch 'master'.

[Fstab] Show non-empty share name in case root fs is exported

Summary:
The leading slash is stripped to save some space for the human readable
description ("share on server"). In case of an exported root filesystem,
this creates an empty export name, so readd the slash.

Test Plan:
Create two entries in fstab:
`server:/  /mnt/a/ nfs defaults 0 0`
`server:/b /mnt/b/ nfs defaults 0 0`
run e.g. solid-hardware5 list details
result
` description = '/ on server'`
` description = 'b on server'`

Reviewers: #frameworks, broulik

Reviewed By: broulik

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D15798

M  +3    -0    src/solid/devices/backends/fstab/fstabdevice.cpp

https://commits.kde.org/solid/419a551baa3e2274bb13a7dad7b9d475eff39cd3