[Fstab] Show non-empty share name in case root fs is exported

Summary:
The leading slash is stripped to save some space for the human readable
description ("share on server"). In case of an exported root filesystem,
this creates an empty export name, so readd the slash.

BUG: 395562

Test Plan:
Create two entries in fstab:
`server:/  /mnt/a/ nfs defaults 0 0`
`server:/b /mnt/b/ nfs defaults 0 0`
run e.g. solid-hardware5 list details
result
` description = '/ on server'`
` description = 'b on server'`

Reviewers: #frameworks, broulik

Reviewed By: broulik

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D15798